[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/Triangle.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Flash.tres" type="Material" id=3]
[ext_resource path="res://SoundObjects/Player_Shoot.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_curve = SubResource( 6 )
color = Color( 0.396078, 0.501961, 1, 1 )
color_ramp = SubResource( 3 )
hue_variation = 0.01
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 13, 12.5 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.396078, 0.501961, 1, 1 )
material = ExtResource( 3 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -13, 13, 0, -12, 13, 13 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.33
one_shot = true

[node name="DashImmunity" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="DashParticles" type="Particles2D" parent="."]
show_behind_parent = true
rotation = -3.25853
emitting = false
amount = 16
lifetime = 0.5
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="CollisionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 0, 0.5 )
shape = SubResource( 8 )

[node name="AreaPolygon" type="Polygon2D" parent="."]
visible = false
color = Color( 0.14902, 0.32549, 0.662745, 0.345098 )
polygon = PoolVector2Array( -13, -12, -13, 13, 13, 13, 13, -12 )

[node name="CollisionPolygon" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 0, 0.0941176, 0.345098 )
polygon = PoolVector2Array( -13, 13, 13, 13, 0, -12 )

[node name="Positions" type="Node2D" parent="."]

[node name="BulletSpawnPos" type="Position2D" parent="Positions"]
position = Vector2( 0, -12 )

[node name="Player_Shoot" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="on_flash_end"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashImmunity" to="." method="_on_DashCooldownTimer_timeout"]
